--- a/src/app/stocks.component.html
+++ b/src/app/stocks.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container-fluid">
 
   <div class="row">
     <div class="col-md-12">
@@ -27,13 +27,17 @@
           </tr>
         </table>
       </div>
-
+      <a (click)="updateChart()"> Update chart</a>
       <hr>
       <h4>Add stock</h4>
       <div class="form-group">
         <input [ngFormControl]="searchStock" type="text" class="form-control" id="searchStock" placeholder="Search a stock">
       </div>
       <div class="table-responsive">
+        <p class="bg-warning" *ngIf="searchStockResults.length === 0 && !queryUnderway && searchStock.value && searchStock.value.length>0">
+          <span class="glyphicon glyphicon-warning-sign"></span>No stocks could be found for the query {{ searchStock.value }}.
+        </p>
+        <p *ngIf="queryUnderway">Searching results...<p>
         <table *ngIf="searchStockResults.length > 0" class="table table-condensed">
           <tr>
             <th></th>
@@ -49,13 +53,29 @@
           </tr>
         </table>
       </div>
-
+    
+      <div class="row">
+        <div class="col-md-12">
+          <h4>Features used in this project</h4>
+          <dl>
+            <dt>rxjs</dt><dd>Binding of input value to query</dd>
+            <dt>JSONP</dt><dd>Retrieving stocks and historical quotes from a web service</dd>
+            <dt>ng2-charts</dt><dd>Visualizing the stock data (also shows how to integrate 3rd party libs into CLI build)</dd>
+          </dl>
+        </div>
+      </div>
     </div>
 
     <div class="col-md-8">
-
-      Chart
-      
+          <p *ngIf="message" class="bg-warning">{{message}}</p>
+          <base-chart class="chart" *ngIf="lineChartData.length > 0"
+                [datasets]="lineChartData"
+                [labels]="lineChartLabels"
+                [options]="lineChartOptions"
+                [legend]="true"
+                [chartType]="'line'"
+                ></base-chart>
+          <p *ngIf="lineChartData.length === 0">Please add some stocks to visualize their historical values</p>
 
     </div>
 
