--- a/src/app/chart.component.html
+++ b/src/app/chart.component.html
@@ -1,13 +1,14 @@
 <div *ngIf="message" class="alert alert-warning" role="alert">
-{{message}}
+    {{message}}
 </div>
 
-<base-chart class="chart" *ngIf="lineChartData.length > 0"
-    [datasets]="lineChartData"
-    [labels]="lineChartLabels"
+<base-chart class="chart" *ngIf="lineChartData.length > 0" 
+    [datasets]="lineChartData" 
+    [labels]="lineChartLabels" 
     [legend]="true"
-    [chartType]="'line'"
-    ></base-chart>
+    [chartType]="'line'">
+</base-chart>
+
 <div *ngIf="stocks.length===0" class="alert alert-success" role="alert">
-Please add some stocks to visualize their historical values
+    Please add some stocks to visualize their historical values
 </div>
