--- a/src/app/stocks.component.html
+++ b/src/app/stocks.component.html
@@ -6,21 +6,8 @@
       
       <p *ngIf="stocks.length === 0">There are currently no stocks to watch</p>
 
-      <div class="table-responsive">
-        <table *ngIf="stocks.length > 0" class="table table-condensed">
-          <tr>
-            <th></th>
-            <th>Symbol</th>
-            <th>Name</th>
-            <th>Exchange</th>
-          </tr>
-          <tr *ngFor="let stock of stocks">
-            <td><a class="btn btn-danger btn-xs" (click)="removeStock(stock)"><span class="glyphicon glyphicon-remove"></span></a></td>
-            <td>{{stock.symbol}}</td>
-            <td>{{stock.name}}</td>
-           <td>{{stock.exchange}}</td>
-          </tr>
-        </table>
+      <div class="table-responsive">     
+        <stocks-table [stocks]="stocks" [icon]="'remove'" (actionClicked)="removeStock($event)"></stocks-table>
       </div>
       
       <div *ngIf="message" class="alert alert-info" role="alert">
@@ -28,32 +15,19 @@
       </div>
       
       <hr>
+
+
       <h4>Add stock</h4>
       
       <div class="form-group">
         <input [ngFormControl]="searchStock" type="text" class="form-control" id="searchStock" placeholder="Search a stock">
       </div>
-      
-      
       <div class="table-responsive">
         <p class="bg-warning" *ngIf="searchStockResults.length === 0 && !queryUnderway && searchStock.value && searchStock.value.length>0">
           <span class="glyphicon glyphicon-warning-sign"></span>No stocks could be found for the query {{ searchStock.value }}.
         </p>
         <p *ngIf="queryUnderway">Searching results...<p>
-        <table *ngIf="searchStockResults.length > 0" class="table table-condensed">
-          <tr>
-            <th></th>
-            <th>Symbol</th>
-            <th>Name</th>
-            <th>Exchange</th>
-          </tr>
-          <tr *ngFor="let stock of searchStockResults">
-            <td><a class="btn btn-success btn-xs" (click)="addStock(stock)"><span class="glyphicon glyphicon-plus"></span></a></td>
-            <td>{{stock.symbol}}</td>
-            <td>{{stock.name}}</td>
-            <td>{{stock.exchange}}</td>
-          </tr>
-        </table>
+        <stocks-table [stocks]="searchStockResults" [icon]="'plus'" (actionClicked)="addStock($event)"></stocks-table>
       </div>
     
       <div class="row">
